SPRING FRAMEWORK CHANGELOG
==========================
$Id: changelog.txt,v 1.136 2004-04-30 10:30:51 jhoeller Exp $


Changes in version 1.0.2 (16.5.2003)
------------------------------------

Package org.springframework.beans
* PropertyValue and MutablePropertyValues implement java.io.Serializable
* fixed CustomBooleanEditor, CustomDateEditor and CustomNumberEditor to properly handle null values in "getAsText"
* added AbstractFactoryBean class as superclass for FactoryBeans that are capable of both singletons and prototypes
* reworked List/Map/Set/PropertiesFactoryBean to extend from AbstractFactoryBean
* deprecated PropertiesFactoryBean's "charset" property in favor of the newly added "fileEncoding" property

Package org.springframework.context
* added ResourceMapFactoryBean class to context.support, for resolving properties into a Map with Resource values
* fixed AbstractMessageSource's parent checks to correctly respect the child's "useCodeAsDefaultMessage" setting
* AbstractApplicationContext uses ResourceEditor with ResourceLoader argument rather than former ContextResourceEditor

Package org.springframework.core
* reworked ResourceEditor to take ResourceLoader argument in overloaded constructor

Package org.springframework.jdbc
* fixed a NPE in SQLErrorCodeSQLExceptionTranslator for custom error translator that did not have DataSource set
* added "query(sql, args, resultSetExtractor)" method to JdbcOperations interface and JdbcTemplate class
* added "query(sql, args, argTypes, resultSetExtractor)" method to JdbcOperations interface and JdbcTemplate class
* added LobRetrievalFailureException, typically wrapping an IOException thrown by stream access methods
* added AbstractLobStreamingResultSetExtractor, offering conversion of IOException to LobRetrievalFailureException
* added AbstractLobCreatingPreparedStatementCallback, offering convenient usage of a LobCreator for LOB updates

Package org.springframework.mock