@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.136 2004-04-30 10:30:51 jhoeller Exp $
+$Id: changelog.txt,v 1.137 2004-04-30 10:41:25 trisberg Exp $
 
 
 Changes in version 1.0.2 (16.5.2003)
@@ -28,6 +28,7 @@ Package org.springframework.jdbc
 * added LobRetrievalFailureException, typically wrapping an IOException thrown by stream access methods
 * added AbstractLobStreamingResultSetExtractor, offering conversion of IOException to LobRetrievalFailureException
 * added AbstractLobCreatingPreparedStatementCallback, offering convenient usage of a LobCreator for LOB updates
+* changed JdbcTemplate queryForList to return List of LinkedHashMap if version > JDK1.3 - LinkedHasMap will preserve column order
 
 Package org.springframework.mock
 * factored out JNDI mock objects from org.springframework.jndi.support (source tree) to separate mock source tree
